# ocaml-win

./: msvc-setup.install  msvc-setup.opam
